tests/ui/transmute-ref-dst-not-nocell.msrv.stderr
error[E0277]: the trait bound `Dst: Immutable` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ref-dst-not-nocell.rs:21:33
   |
21 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Immutable` is not implemented for `Dst`
   |
note: required by `AssertDstIsImmutable`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ref-dst-not-nocell.rs:21:33
   |
21 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
